# JResult

./: CMakeLists.txt  README.md
cmake/: JResultConfig.cmake
interface/JResult/: JResult.h
ut/: CMakeLists.txt
ut/JResult/: CMakeLists.txt  JResult.cpp
